--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,7 +100,27 @@
                     android:textSize="10sp"
                     android:textStyle="italic" />
             </LinearLayout>
+            <LinearLayout android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp">
+                <TextView android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/label_state"
+                    android:textSize="18sp"/>
+                <Space android:layout_width="5dp"
+                    android:layout_height="wrap_content"/>
+                <TextView android:id="@+id/connection_state"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/disconnected"
+                    android:textSize="18sp"/>
+            </LinearLayout>
+            <ExpandableListView android:id="@+id/gatt_services_list2"
+                android:layout_width="match_parent"
+                android:layout_height="285dp" />
         </LinearLayout>
+
     </ScrollView>
 
     <HorizontalScrollView
@@ -144,5 +164,8 @@
                 android:src="@drawable/soda"/>
         </LinearLayout>
 
+
     </HorizontalScrollView>
+
+
 </LinearLayout>
